--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.etiqa.etiqa_assessment">
    <application
-        android:label="etiqa_assessment"
+        android:label="TodoTracking"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
